src/objects/vlocity_ins__ProductRelationshipType__c.object
<CustomObject>
    <description>This object defines the relationship types and its behavior during selling and delivery process.</description>
    <fields>
        <fullName>vlocity_ins__ActivatedDate__c</fullName>
        <description>The date when this relationship type was first activated.</description>
        <label>Activated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DeactivatedDate__c</fullName>
        <description>The date when this relationship type was deactivated.</description>
        <label>Deactivated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <description>Defines description of Product Relationship Type</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if the Relationship Type is active or inactive.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelationshipTypeLabel__c</fullName>
        <description>Defines user-friendly label of the relationship for display, which is translatable.</description>
        <label>Relationship Type Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelationshipTypeScope__c</fullName>
        <description>Defines the scope where the relationship type can be evaluated and/or instantiated for runtime flows. Valid values are Opportunity, Quote, Order, Fulfillment, Browse Catalog)</description>
        <label>Relationship Type Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Fulfillment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ReverseRelationshipTypeLabel__c</fullName>
        <description>Defines user-friendly reverse label of the relationship for display, which is translatable.</description>
        <label>Relationship Type Reverse Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TrackIn__c</fullName>
        <description>Identifies if the relationship type is assetizable during runtime or not. Value values are (None, Line Item Relationship). &apos;None&apos; implies &apos;Not Assetizable&apos;. &apos;Line Item Relationship&apos; implies assetizable in Line Item relationship object.</description>
        <label>Track In</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Line Item Relationship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Relationship Type</label>
    <nameField>
        <label>Product Relationship Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Relationship Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>